[package]
name = "rpn-engine"
version = "0.1.0"
edition = "2021"
description = "A zero-allocation, no_std, const-evaluable Reverse Polish Notation evaluator over a caller-provided stack buffer."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MerlijnW70/rpn-engine"
keywords = ["rpn", "no-std", "no-alloc", "const-fn", "calculator"]
categories = ["no-std", "algorithms", "mathematics"]
readme = "README.md"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "eval"
harness = false
